--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Hrishika Agrawal",
   "license": "ISC",
+  "engines": {
+    "node": "16.15.0"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
